End of episode 1
To make figwheel work, I used the same configuration has in the figwheel lein
template.